# phidgets_drivers

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile-dashing  Dockerfile-foxy  Dockerfile-galactic  Dockerfile-kinetic  Dockerfile-melodic  Dockerfile-noetic  LICENSE  LICENSE.bsd  README  README.md  clang-check-style.py  stack.xml
debian/: changelog  control
libphidget21/: CHANGELOG.rst  CMakeLists.txt  Makefile.phidgets  package.xml
libphidget21/debian/: changelog  control  rules
libphidget22/: CHANGELOG.rst  CMakeLists.txt  package.xml
libphidget22/cmake/: libphidget22-extras.cmake.in
libphidget22/env_hook/: libphidget22_library_path.sh
libphidget22/patch/: libphidget22-1.13.20230224-fix-riscv64-build.patch  libphidget22-1.13.20230224-fix-warnings.patch  libphidget22-1.9.20220203-fix-warnings.patch  libphidgets22-1.6.20200417-fix-warnings.patch  libphidgets22-1.6.20210312-fix-warnings.patch  libphidgets22-1.7.20210816-fix-warnings.patch  libphidgets22-fix-uninitialized-memory-access.patch
phidgets_accelerometer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_accelerometer_nodelet.xml
phidgets_accelerometer/include/phidgets_accelerometer/: accelerometer_ros_i.h  accelerometer_ros_i.hpp  phidgets_accelerometer_nodelet.h
phidgets_accelerometer/launch/: accelerometer-launch.py  accelerometer.launch
phidgets_accelerometer/src/: accelerometer_ros_i.cpp  phidgets_accelerometer_node.cpp  phidgets_accelerometer_nodelet.cpp
phidgets_analog_outputs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_analog_outputs_nodelet.xml
phidgets_analog_outputs/include/phidgets_analog_outputs/: analog_outputs_ros_i.h  analog_outputs_ros_i.hpp  phidgets_analog_outputs_nodelet.h
phidgets_analog_outputs/launch/: analog_outputs-launch.py  analog_outputs.launch
phidgets_analog_outputs/src/: analog_outputs_ros_i.cpp  phidgets_analog_outputs_nodelet.cpp
phidgets_api/: CHANGELOG.rst  CMakeLists.txt  Makefile  manifest.xml  package.xml
phidgets_api/debian/: changelog  control  rules
phidgets_api/share/: setup-udev.sh
phidgets_api/src/: accelerometer.cpp  analog_input.cpp  analog_inputs.cpp  analog_output.cpp  analog_outputs.cpp  current_input.cpp  current_inputs.cpp  digital_input.cpp  digital_inputs.cpp  digital_output.cpp  digital_outputs.cpp  encoder.cpp  encoders.cpp  gyroscope.cpp  humidity.cpp  ik.cpp  imu.cpp  ir.cpp  magnetometer.cpp  motor.cpp  motors.cpp  phidget.cpp  phidget21.cpp  phidget22.cpp  spatial.cpp  stepper.cpp  steppers.cpp  temperature.cpp
phidgets_c_api/: .gitignore  CMakeLists.txt  Makefile  libphidget_2.1.8.20120514.md5sum  libphidget_2.1.8.20130618.md5sum  manifest.xml  package.xml  setup-udev.sh
phidgets_digital_inputs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_digital_inputs_nodelet.xml
phidgets_digital_inputs/launch/: digital_inputs-launch.py  digital_inputs.launch
phidgets_digital_inputs/src/: digital_inputs_ros_i.cpp  phidgets_digital_inputs_node.cpp  phidgets_digital_inputs_nodelet.cpp
phidgets_digital_outputs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_digital_outputs_nodelet.xml
phidgets_digital_outputs/launch/: digital_outputs-launch.py  digital_outputs.launch
phidgets_digital_outputs/src/: digital_outputs_ros_i.cpp  phidgets_digital_outputs_node.cpp  phidgets_digital_outputs_nodelet.cpp
phidgets_drivers/: CHANGELOG.rst  CMakeLists.txt  package.xml
phidgets_gyroscope/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_gyroscope_nodelet.xml
phidgets_gyroscope/launch/: gyroscope-launch.py  gyroscope.launch
phidgets_gyroscope/src/: gyroscope_ros_i.cpp  phidgets_gyroscope_node.cpp  phidgets_gyroscope_nodelet.cpp
phidgets_high_speed_encoder/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_high_speed_encoder_nodelet.xml
phidgets_high_speed_encoder/debian/: changelog  control  rules
phidgets_high_speed_encoder/launch/: high_speed_encoder-launch.py  high_speed_encoder.launch
phidgets_high_speed_encoder/msg/: EncoderDecimatedSpeed.msg  EncoderParams.msg  encoder_params.msg
phidgets_high_speed_encoder/src/: high_speed_encoder.cpp  high_speed_encoder_ros_i.cpp  phidgets_high_speed_encoder.cpp  phidgets_high_speed_encoder_node.cpp  phidgets_high_speed_encoder_nodelet.cpp
phidgets_humidity/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_humidity_nodelet.xml
phidgets_humidity/launch/: humidity.launch
phidgets_humidity/src/: humidity_ros_i.cpp  phidgets_humidity_nodelet.cpp
phidgets_ik/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_ik_nodelet.xml
phidgets_ik/launch/: ik-launch.py  ik.launch
phidgets_ik/src/: ik_ros_i.cpp  phidgets_ik_node.cpp  phidgets_ik_nodelet.cpp
phidgets_ik/srv/: SetDigitalOutput.srv
phidgets_imu/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
phidgets_imu/config/: analyzers.yaml
phidgets_imu/launch/: diagnostics_aggregator.launch  imu.launch  imu_single_nodes.launch
phidgets_imu/src/: imu_ros_i.cpp  phidgets_imu.cpp  phidgets_imu_node.cpp  phidgets_imu_nodelet.cpp
phidgets_ir/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
phidgets_magnetometer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_magnetometer_nodelet.xml
phidgets_magnetometer/launch/: magnetometer-launch.py  magnetometer.launch
phidgets_magnetometer/src/: magnetometer_ros_i.cpp  phidgets_magnetometer_node.cpp  phidgets_magnetometer_nodelet.cpp
phidgets_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
phidgets_msgs/debian/: changelog  control  rules
phidgets_msgs/msg/: EncoderDecimatedSpeed.msg
phidgets_msgs/srv/: GetStepperSettingRanges.srv  GetStepperSettings.srv  SetAnalogOutput.srv  SetDigitalOutput.srv
phidgets_spatial/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  phidgets_spatial_nodelet.xml
phidgets_spatial/launch/: spatial-launch.py  spatial.launch
phidgets_spatial/src/: phidgets_spatial_node.cpp  phidgets_spatial_nodelet.cpp  spatial_ros_i.cpp
(+133 files in other folders)
