<?xml version="1.0"?>
<package format="2">
  <name>libphidget21</name>
  <version>0.7.0</version>
  <description>This package wraps the libphidget21 to use it as a ros dependency</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/libphidget21</url>
  <maintainer email="benjamin.maidel@ipa.fraunhofer.de">Benjamin Maidel</maintainer>
  <author>Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libusb-dev</depend>
  <depend>mk</depend>
  <depend>roslib</depend>
  <depend>rospack</depend>

</package>
