<?xml version="1.0"?>
<package format="2">
  <name>libphidget21</name>
  <version>0.7.11</version>
  <description>This package wraps the libphidget21 to use it as a ROS dependency</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/libphidget21</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>

  <exec_depend>libusb-1.0</exec_depend>
</package>
