<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>libphidget22</name>
  <version>2.3.3</version>
  <description>This package wraps the libphidget22 to use it as a ROS dependency</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/libphidget22</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Alexander Bubeck</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <exec_depend>libusb-1.0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
