<?xml version="1.0"?>
<package format="2">
  <name>phidgets_analog_outputs</name>
  <version>1.0.7</version>
  <description>Driver for the Phidgets Analog Output devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Carsten Plasberg</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>phidgets_api</depend>
  <depend>phidgets_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/phidgets_analog_outputs_nodelet.xml" />
  </export>
</package>
