<?xml version="1.0"?>
<package>
  <name>phidgets_api</name>
  <version>0.7.4</version>
  <description>A C++ Wrapper for the Phidgets C API</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>
  <maintainer email="muhrix@gmail.com">Murilo FM</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/phidgets_api</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Tully Foote</author>
  <author>Ivan Dryanovski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libphidget21</build_depend>

  <run_depend>libusb-1.0</run_depend>
  <run_depend>libphidget21</run_depend>

</package>
