<?xml version="1.0"?>
<package format="2">
  <name>phidgets_api</name>
  <version>2.3.3</version>
  <description>A C++ Wrapper for the Phidgets C API</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/phidgets_api</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Tully Foote</author>
  <author>Ivan Dryanovski</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>libphidget22</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
