<?xml version="1.0"?>
<package>
  <name>phidgets_c_api</name>
  <version>0.2.0</version>
  <description>The Phidgets C API package</description>
  
  <maintainer email="muhrix@gmail.com">Murilo F. M.</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/phidgets_c_api</url>

  <author email="patrick@phidgets.com">Copyright (C) 2010 Phidgets Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <run_depend>libusb-1.0-dev</run_depend>
</package>
