<?xml version="1.0"?>
<package format="2">
  <name>phidgets_digital_inputs</name>
  <version>1.0.7</version>
  <description>Driver for the Phidgets Digital Input devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Chris Lalancette</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>phidgets_api</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/phidgets_digital_inputs_nodelet.xml" />
  </export>
</package>
