<?xml version="1.0"?>
<package>
  <name>phidgets_drivers</name>
  <version>0.7.4</version>
  <description>API and ROS drivers for Phidgets devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>
  <maintainer email="muhrix@gmail.com">Murilo FM</maintainer>

  <license>BSD, LGPL</license>

  <url type="website">http://ros.org/wiki/phidgets_drivers</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Phidgets Inc.</author>
  <author>Tully Foote</author>
  <author>Ivan Dryanovski</author>
  <author>Martin Guenther</author>
  <author>Murilo FM</author>
  <author>José-Luis Blanco Claraco</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>phidgets_api</run_depend>
  <run_depend>phidgets_imu</run_depend>
  <run_depend>libphidget21</run_depend>
  <run_depend>phidgets_high_speed_encoder</run_depend>

  <export>
    <metapackage />
  </export>
</package>
