<?xml version="1.0"?>
<package format="2">
  <name>phidgets_drivers</name>
  <version>0.7.11</version>
  <description>API and ROS drivers for Phidgets devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD, LGPL</license>

  <url type="website">http://ros.org/wiki/phidgets_drivers</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Phidgets Inc.</author>
  <author>Tully Foote</author>
  <author>Ivan Dryanovski</author>
  <author>Martin Günther</author>
  <author>Murilo FM</author>
  <author>José-Luis Blanco Claraco</author>
  <author>Chris Lalancette</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>libphidget21</exec_depend>
  <exec_depend>phidgets_api</exec_depend>
  <exec_depend>phidgets_ik</exec_depend>
  <exec_depend>phidgets_high_speed_encoder</exec_depend>
  <exec_depend>phidgets_imu</exec_depend>
  <exec_depend>phidgets_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
