<?xml version="1.0"?>
<package format="2">
  <name>phidgets_drivers</name>
  <version>2.3.3</version>
  <description>API and ROS drivers for Phidgets devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD, LGPL</license>

  <url type="website">http://ros.org/wiki/phidgets_drivers</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Phidgets Inc.</author>
  <author>Tully Foote</author>
  <author>Ivan Dryanovski</author>
  <author>Martin Günther</author>
  <author>Murilo FM</author>
  <author>José-Luis Blanco Claraco</author>
  <author>Chris Lalancette</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>libphidget22</exec_depend>
  <exec_depend>phidgets_accelerometer</exec_depend>
  <exec_depend>phidgets_api</exec_depend>
  <exec_depend>phidgets_analog_inputs</exec_depend>
  <exec_depend>phidgets_digital_inputs</exec_depend>
  <exec_depend>phidgets_digital_outputs</exec_depend>
  <exec_depend>phidgets_gyroscope</exec_depend>
  <exec_depend>phidgets_ik</exec_depend>
  <exec_depend>phidgets_high_speed_encoder</exec_depend>
  <exec_depend>phidgets_magnetometer</exec_depend>
  <exec_depend>phidgets_motors</exec_depend>
  <exec_depend>phidgets_msgs</exec_depend>
  <exec_depend>phidgets_spatial</exec_depend>
  <exec_depend>phidgets_temperature</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
